Fix light theme and hide flat dark behind experimental flag

--- a/plugins/c9.ide.layout.classic/themes/default-flat-light.less
+++ b/plugins/c9.ide.layout.classic/themes/default-flat-light.less
@@ -594,6 +594,7 @@
 @dialog-header-font-size: 16px;
 @dialog-header-font-weight: normal;
 
+@dialog-content-color: #f1f1f1;
 @dialog-content-background: darken(#FEFEFE, @darken-chrome);
 @dialog-content-dark-background-color: @dialog-content-background;
 @dialog-content-dark-gradient: linear-gradient(top, transparent 0%, transparent 100%);
