--- a/plugins/c9.ide.layout.classic/themes/flat-dark.less
+++ b/plugins/c9.ide.layout.classic/themes/flat-dark.less
@@ -19,6 +19,10 @@
     background: rgba(255,255,255, 0.14) !important;
 }
 
+.searchresults .item{
+    padding : 3px 3px 3px 5px;
+}
+
 .envcontainer {
     box-shadow: 1px 1px 6px 0px rgba(0, 0, 0, 0.08);
 }
